Bugzilla #2750 (https://bugs.freedesktop.org/show_bug.cgi?id=2750)     Linux-only fixes: Fix case where a smaller write-combining region     blocks write-combining setting of the whole frame buffer. Fix bug in wc     setting code when regions are first splitted and setting of     write-combining then fails.